--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-native-system-settings",
   "version": "0.0.3",
-  "description": "Provides accessing some Android system setting values like localization, language, country, oritentation, screen layout and ui mode type.",
+  "description": "Provides accessing some Android system setting values like localization, language, country, is24HourFormat, oritentation, screen layout and ui mode type.",
   "main": "index.js",
   "keywords": [
   	"react-native",
