--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-native-system-settings",
   "version": "0.0.4",
-  "description": "Provides accessing some Android system setting values like localization, language, country, is24HourFormat, oritentation, screen layout and ui mode type.",
+  "description": "Provides accessing some Android system setting values like localization, language, country, simCountry, networkCountry, is24HourFormat, oritentation, screen layout and ui mode type.",
   "main": "index.js",
   "keywords": [
   	"react-native",
@@ -12,7 +12,10 @@
 	"screenWidthDp",
 	"smallestScreenWidthDp",
 	"screenHeightDp",
-	"keyboard"
+	"keyboard",
+	"user country",
+	"sim country",
+	"network country"
   ],
   "author": {
     "name": "efkan"
