--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    buildToolsVersion "26.0.2" // <-- updating according to gradle 3.0.1
 
     defaultConfig {
         minSdkVersion 16
@@ -21,5 +21,5 @@ android {
 }
 
 dependencies {
-    compile 'com.facebook.react:react-native:0.19.+'
+    implementation 'com.facebook.react:react-native:0.19.+'
 }
